classroom/k8s/students-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: students-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: students
  template:
    metadata:
      labels:
        component: students
    spec:
      containers:
        - name: students
          image: udeshyagiri/classroom-students
          ports:
            - containerPort: 8002
