classroom/k8s/teachers-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teachers-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: teachers
  template:
    metadata:
      labels:
        component: teachers
    spec:
      containers:
        - name: teachers
          image: udeshyagiri/classroom-teachers
          ports:
            - containerPort: 8001
