classroom/k8s/auth-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: auth
  ports:
    - port: 8000
      targetPort: 8000
