classroom/k8s/client-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 3000 #other pods access the client pod here
      targetPort: 3000 #the port in the client pod
