classroom/k8s/postgres-auth-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-auth-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: postgres-auth
  ports:
    - port: 5432
      targetPort: 5432
