classroom/k8s/students-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: students-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: students
  ports:
    - port: 8002
      targetPort: 8002
