classroom/k8s/teachers-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: teachers-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: teachers
  ports:
    - port: 8001
      targetPort: 8001
