classroom/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - http:
        paths:
          - path: /api/auth/?(.*)
            backend:
              serviceName: auth-cluster-ip-service
              servicePort: 8000
          - path: /api/students/?(.*)
            backend:
              serviceName: students-cluster-ip-service
              servicePort: 8002
          - path: /api/teachers/?(.*)
            backend:
              serviceName: teachers-cluster-ip-service
              servicePort: 8001
          - path: /?(.*)
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
